static/css/truewiki.css
body > * {
	width: 1020px;
}

main {
    font-family:  "Helvetica Neue", Helvetica, Arial, freesans, clean, sans-serif;
    font-size: 15px;
    line-height: 1.7;
    overflow: hidden;
    padding: 12px;
    word-wrap: break-word;
}

.overflow-hidden {
    overflow: hidden !important;
}

#pagename {
    color: white;
    font-size: 300%;
    padding-left: 20px;
}

#navigation-bar {
    float: right;
    padding-right: 10px;
}
#navigation-bar li {
    padding-right: 10px;
}

a {
    text-decoration: none;
}
a:visited {
    color: purple;
}
a.new {
    color: gray;
}

#toc li {
    text-align: left;
}

#toc ul {
    list-style-image: none;
    list-style-type: none;
    margin-left: 0;
    margin: .3em 0;
    padding: 0;
}

#toc ul ul {
    margin: 0 0 0 2em;
}

#toc {
    background-color: #f9f9f9;
    font-size: 95%;
    padding: 5px;
}
#toc td {
    padding: 5px 12px;
}

#toc h2 {
    border: none;
    display: inline;
    font-size: 100%;
    font-weight: bold;
    padding: 0;
}
#toctitle {
    text-align: center;
}

.center {
    text-align: center;
    width: 100%;
}
.center * {
    margin-left: auto;
    margin-right: auto;
}

.thumb {
    background-color: transparent;
    margin-bottom: 0px;
    width: auto;
}
.thumbinner {
    background-color: #f9f9f9;
    display: inline-table;
    font-size: 94%;
    outline: 1px solid #ccc;
    overflow: hidden;
    padding: 3px 3px 0 3px !important;
    text-align: center;
}
.thumbcaption {
    border: none;
    caption-side: bottom;
    display: table-caption;
    font-size: 94%;
    margin-top: -5px;
    padding: 0 3px 0 3px !important;
    text-align: left;
}
.thumbcaption p {
    margin: 0;
}

.magnify {
    background: none !important;
    border: none !important;
    float: right;
    margin-right: -3px;
}

.magnify a {
    background: none !important;
    border: none !important;
    display: block;
}

p {
    margin: 8px 0 0 0;
}

.tright {
    margin: 6px 0 17px 17px;
}
.tleft {
    margin: 6px 17px 17px 0;
}

.tright, .floatright {
    clear: right;
    float: right;
}
.tleft, .floatleft {
    clear: left;
    float: left;
}

dd {
    margin: 0 0 1px 13px;
}


h1, h2, h3, h4, h5, h6 {
    border-bottom: 1px solid #aaa;
    font-weight: normal;
    margin-bottom: 5px;
    margin: 0;
    overflow: hidden;
    padding-bottom: 0px;
    padding-top: 32px;
    text-decoration: none;
    width: auto;
}
h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {
    padding-left: 15px;
}

h1 {
    font-size: 170%;
}
h2 {
    font-size: 150%;
}
h3 {
    font-size: 130%;
}
h4 {
    font-size: 110%;
}
h5 {
    font-size: 100%;
}
h6 {
    font-size: 100%;
}

table.wikitable {
    border-collapse: collapse;
    border: 1px #aaa solid;
    margin: 1px 1px 1px 0;
}
table.wikitable > * > tr > th {
    text-align: center;
}
table.wikitable > * > tr > th,
table.wikitable > * > tr > td {
    border: 1px #aaa solid;
    padding: 5px;
}

table {
    border-collapse: collapse;
}
td {
    border-collapse: collapse;
    border: 1px solid #5E5E5E;
    padding: 5px 5px 2px;
    vertical-align: top;
}

pre {
    background-color: #f9f9f9;
    border: 1px ridge #767676;
    color: Black;
    line-height: 1.2;
    padding: 10px;
}

.external {
    background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=) center right no-repeat;
    background-size: auto;
    background-size: 0.6em 0.6em;
    padding-right: 0.8em;
}

.anchor {
    background-size: 0.6em 1.35em;
    background-size: auto;
    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" class="octicon octicon-link" viewBox="0 0 16 16" version="1.1" aria-hidden="true"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"/></svg>') no-repeat;
    float: left;
    height: 1em;
    margin-left: -0.2em;
    margin-top: 0.5em;
    opacity: 0;
    position: absolute;
    text-decoration: none;
    transition-property: opacity;
    transition: 0.1s;
    width: 0.7em;
}
a:not([href]) {
    color: inherit;
    text-decoration: none;
}
h1:hover .anchor,
h2:hover .anchor,
h3:hover .anchor,
h4:hover .anchor,
h5:hover .anchor,
h6:hover .anchor {
    text-decoration: none;
}
:hover > .anchor, .anchor:focus {
    opacity: 1;
}

#language-bar {
    border-bottom: 1px solid #aaa;
    margin-bottom: 5px;
    padding-right: 3px;
    text-align: right;
}
#language-bar ul {
    margin: 0;
}
#language-bar ul li {
    display: inline-block;
    height: 2.5em;
    line-height: 1.1;
    list-style-image: none;
    list-style-type: none;
    margin-right: 2px;
    text-align: center;
    text-transform: uppercase;
    width: 26px;
}

#categories {
    border-top: 1px solid #aaa;
    clear: both;
    font-size: 80%;
    margin-top: 5px;
    padding-left: 3px;
}
#categories div {
    display: inline-block;
}
#categories ul {
    display: inline-block;
    margin: 0;
    padding: 0;
}
#categories ul li {
    display: inline-block;
    line-height: 1.1;
    list-style-image: none;
    list-style-type: none;
    margin-left: 2px;
}
#categories ul li:not(:last-child):after {
    content: " | "
}

